# SciTec-Interview-Problem

SciTec_Coding_Problem/: .cproject  .project  CMakeLists.txt  Converter.cpp  Converter.h  Converter.hpp  ECEF.cpp  ECEF.h  ECEF.hpp  LLA.cpp  LLA.h  LLA.hpp  Makefile  README.md  TestCases.cpp  VectorLogic.cpp  VectorLogic.h  VectorLogic.hpp  main  main.cpp
